my-apps/copyparty/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: copyparty
spec:
  ports:
    - name: http
      port: 3923
      targetPort: 3923
      protocol: TCP
  selector:
    app: copyparty
